[gd_scene load_steps=43 format=3 uid="uid://cibnyynhphu76"]

[ext_resource type="PackedScene" path="res://Scenes/Utility/shader/ShaderWindWakerBeach.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://7jnwei6j4avo" path="res://Scenes/Utility/Contador.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://cshicesnovic5" path="res://Assets/Images/PescaSobreAgua/Lancha costado.png" id="3"]
[ext_resource type="Texture2D" uid="uid://6m1qb7qvrgyq" path="res://Assets/Images/PescaSobreAgua/FishingRod/Cania de pescar.png" id="4"]
[ext_resource type="AudioStream" uid="uid://6vb216b1rvo5" path="res://Assets/Sounds/pesca_sobre_agua.ogg" id="5"]
[ext_resource type="PackedScene" uid="uid://cth3iu2lap5nq" path="res://Scenes/Entity/FishingRod/FishingRod.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://ddctdi6k2jmmh" path="res://Assets/Images/PescaSobreAgua/Radar/Radar.png" id="7"]
[ext_resource type="Texture2D" uid="uid://cq32w0l7hkx7a" path="res://Assets/Images/PescaSobreAgua/Sensor/Sensor de pesca.png" id="8"]
[ext_resource type="Texture2D" uid="uid://wuxfjkxkmkve" path="res://Assets/Images/PescaSobreAgua/Radar/BtnFishInactive.png" id="9"]
[ext_resource type="Texture2D" uid="uid://c8frk8ero32jh" path="res://Assets/Images/PescaSobreAgua/Radar/BtnFishActive.png" id="10"]
[ext_resource type="PackedScene" uid="uid://b17rf02r12bmp" path="res://Scenes/Utility/analog/Analog.tscn" id="11"]
[ext_resource type="PackedScene" path="res://Scenes/Pause/PauseMenu.tscn" id="12"]
[ext_resource type="Texture2D" uid="uid://5n2c0rkd2lum" path="res://Assets/Images/Tilesets/Bloque.png" id="13"]
[ext_resource type="PackedScene" uid="uid://c1vnk2846spqf" path="res://Scenes/Entity/FishingRodItem/FishingRodItem.tscn" id="14"]
[ext_resource type="PackedScene" uid="uid://bk3kntw4c4uf1" path="res://Scenes/Entity/RadarItem/RadarItem.tscn" id="15"]
[ext_resource type="Script" uid="uid://duyywp041vv4u" path="res://Scenes/Games/PescaSobreAgua/Nivel1/PescaSobreAgua.gd" id="16"]
[ext_resource type="AudioStream" uid="uid://bwkqaogcrblqo" path="res://Assets/Sounds/SFX/button_press.wav" id="17"]
[ext_resource type="AudioStream" uid="uid://d2gedssbihwi7" path="res://Assets/Sounds/SFX/fishing_rod_throw.mp3" id="18"]
[ext_resource type="AudioStream" uid="uid://c1r00qegwyg6w" path="res://Assets/Sounds/SFX/fishing_rod_get.mp3" id="19"]
[ext_resource type="Texture2D" uid="uid://priw8xyd8crs" path="res://Assets/Images/PescaSobreAgua/FishingRod/Manivela.png" id="20"]
[ext_resource type="Texture2D" uid="uid://0crfxf4p5310" path="res://Assets/Images/PescaSobreAgua/Sensor/Manivela de sensor de pesca.png" id="21"]
[ext_resource type="PackedScene" uid="uid://c8x105gq6ieqg" path="res://Scenes/Entity/FishOverSea/Trash/Trash.tscn" id="22"]
[ext_resource type="PackedScene" uid="uid://cenweaaa06ab4" path="res://Scenes/Entity/FishOverSea/Fish/Fish.tscn" id="23"]
[ext_resource type="PackedScene" uid="uid://brb4l6a0f1a1n" path="res://Scenes/Entity/FishOverSea/FishBox/FishBox.tscn" id="24"]
[ext_resource type="Texture2D" uid="uid://d3op0bg02eneh" path="res://Assets/Images/PescaSobreAgua/Sensor/Membrana del sensor de pesca.png" id="25"]
[ext_resource type="AudioStream" uid="uid://b7yrfq5st0a5" path="res://Assets/Sounds/SFX/water_splash.mp3" id="26"]
[ext_resource type="PackedScene" path="res://Scenes/Utility/GameOver/GameOver.tscn" id="27"]
[ext_resource type="Texture2D" uid="uid://bpcgsqia5tpjf" path="res://Assets/Images/AudioSettings/Botones/Barra de sonido.png" id="28"]
[ext_resource type="Theme" path="res://Assets/InputTheme/input_theme.tres" id="29"]
[ext_resource type="PackedScene" path="res://Scenes/Utility/Win/Win.tscn" id="30"]
[ext_resource type="Texture2D" uid="uid://cxcyi67pybsat" path="res://Assets/Images/Fondo de contador de puntos.png" id="31"]
[ext_resource type="FontFile" path="res://Assets/Fonts/btnFont.tres" id="32"]
[ext_resource type="AudioStream" uid="uid://c8hxugccgxws8" path="res://Assets/Sounds/SFX/ender_punch.wav" id="33"]

[sub_resource type="Animation" id="4"]
resource_name = "Fishing"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Sensor/FishingRodLever:flip_v")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../Sensor/FishingRodLever:flip_v")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_upm0a"]
_data = {
&"Fishing": SubResource("4"),
&"RESET": SubResource("5")
}

[sub_resource type="StyleBoxTexture" id="6"]
texture = ExtResource("28")
region_rect = Rect2(128.534, 60.6043, 1353.1, 246.838)
modulate_color = Color(1, 1, 1, 0)

[sub_resource type="StyleBoxTexture" id="8"]
texture = ExtResource("25")
region_rect = Rect2(0, 0, 25, 1133)

[sub_resource type="StyleBoxTexture" id="7"]
texture = ExtResource("25")
region_rect = Rect2(0, 0, 25, 1133)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vkxo2"]
texture = ExtResource("13")
texture_region_size = Vector2i(80, 80)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qtfhm"]
texture = ExtResource("13")
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, 8, 8, 8)
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, 8, 8, 8, -8, -8, -8)
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
0:0/4 = 4
0:0/4/transpose = true
0:0/4/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 8)
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, 8, -8, -8, -8, -8, 8)

[sub_resource type="TileSet" id="3"]
tile_size = Vector2i(80, 80)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_vkxo2")
sources/1 = SubResource("TileSetAtlasSource_qtfhm")

[node name="PescaSobreAgua" type="Node2D" groups=["sea_fish_level"]]
script = ExtResource("16")
RadarItem = ExtResource("15")
Fish = ExtResource("23")
Trash = ExtResource("22")

[node name="Contador" parent="." instance=ExtResource("2")]

[node name="Background" type="Node" parent="."]

[node name="Sprite2D" type="TextureRect" parent="Background"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -14.0
offset_top = -319.0
offset_right = 7.0
offset_bottom = 400.0
texture = ExtResource("3")
expand_mode = 1

[node name="ShaderWindWakerBeach" parent="Background" instance=ExtResource("1")]
z_index = -1

[node name="Items" type="Node" parent="."]

[node name="FishingRod" type="Sprite2D" parent="Items"]
position = Vector2(2550, 700)
rotation = 1.48353
texture = ExtResource("4")

[node name="Radar" type="Sprite2D" parent="Items"]
texture = ExtResource("7")
centered = false
offset = Vector2(0, 250)

[node name="FishingRodLever" type="Sprite2D" parent="Items"]
position = Vector2(2780, 1650)
rotation = 1.48353
texture = ExtResource("20")
flip_v = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Items/FishingRodLever"]
libraries = {
&"": SubResource("AnimationLibrary_upm0a")
}

[node name="Sounds" type="Node" parent="."]

[node name="BGSong" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5")
volume_db = -10.0
autoplay = true
bus = &"Music"

[node name="SoundPress" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("17")
bus = &"SFX"

[node name="SoundFish" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("18")
bus = &"SFX"

[node name="SoundCatch" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("19")
bus = &"SFX"

[node name="SoundSplash" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("26")
bus = &"SFX"

[node name="PunchSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("33")
bus = &"SFX"

[node name="Sensor" type="Node" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Sensor"]
position = Vector2(3000, 850)
texture = ExtResource("8")

[node name="BtnFish" type="TextureButton" parent="Sensor"]
offset_left = 250.0
offset_top = 1100.0
offset_right = 620.0
offset_bottom = 1469.0
disabled = true
texture_normal = ExtResource("10")
texture_pressed = ExtResource("9")
texture_disabled = ExtResource("9")

[node name="FishingRodLever" type="Sprite2D" parent="Sensor"]
position = Vector2(2820, 1275)
rotation = 3.14159
texture = ExtResource("21")
flip_v = true

[node name="SliderPoints" type="HSlider" parent="Sensor"]
offset_left = 3118.0
offset_top = 1420.0
offset_right = 4471.0
offset_bottom = 1666.0
rotation = -90.0
scale = Vector2(0.845, 0.1)
theme = ExtResource("29")
theme_override_styles/slider = SubResource("6")
theme_override_styles/grabber_area = SubResource("8")
theme_override_styles/grabber_area_highlight = SubResource("7")
max_value = 400.0
editable = false

[node name="Analog" parent="." instance=ExtResource("11")]
z_index = 100
position = Vector2(213, 1582)
scale = Vector2(2, 2)

[node name="Pause" type="Node2D" parent="."]
z_index = 100

[node name="PauseMenu" parent="Pause" instance=ExtResource("12")]
modulate = Color(1, 1, 1, 0.588235)
z_index = 100
position = Vector2(3200, 1750)

[node name="Collisions" type="Node" parent="."]

[node name="Terrain" type="Node2D" parent="Collisions"]
visible = false

[node name="Layer0" type="TileMapLayer" parent="Collisions/Terrain"]
use_parent_material = true
tile_set = SubResource("3")

[node name="Characters" type="Node" parent="."]

[node name="FishingRod" parent="Characters" instance=ExtResource("6")]
position = Vector2(1100, 450)
SPEED = 100

[node name="FishingRodItem" parent="Characters" groups=["player"] instance=ExtResource("14")]
z_index = 1
position = Vector2(450, 650)
rotation = 0.785398
scale = Vector2(0.03, 0.2)
SPEED = 300

[node name="FishBox" parent="Characters" instance=ExtResource("24")]
position = Vector2(3020, 850)

[node name="RadarItemTimer" type="Timer" parent="Characters"]
wait_time = 3.0
one_shot = true
autostart = true

[node name="FishingTimer" type="Timer" parent="Characters"]
wait_time = 15.0

[node name="GameOver" parent="." instance=ExtResource("27")]
visible = false

[node name="Win" parent="." instance=ExtResource("30")]
visible = false

[node name="Timer" type="Node2D" parent="."]
z_index = 2
position = Vector2(1600, 0)

[node name="BGTimer" type="Sprite2D" parent="Timer"]
rotation = -1.5708
scale = Vector2(1, 3.5)
texture = ExtResource("31")
offset = Vector2(45, -2)

[node name="Timer" type="Timer" parent="Timer"]
wait_time = 180.0
autostart = true

[node name="VBoxContainer" type="VBoxContainer" parent="Timer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -189.0
offset_right = 189.0
offset_bottom = 162.0

[node name="Tries" type="MarginContainer" parent="Timer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Timer/VBoxContainer/Tries"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = ExtResource("32")
text = "INTENTOS: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="MarginContainer" parent="Timer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Timer/VBoxContainer/Timer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -3
theme_override_fonts/font = ExtResource("32")
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="animation_finished" from="Items/FishingRodLever/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Sensor/BtnFish" to="." method="_on_BtnFish_pressed"]
[connection signal="timeout" from="Characters/RadarItemTimer" to="." method="_on_RadarItemTimer_timeout"]
[connection signal="timeout" from="Characters/FishingTimer" to="." method="_on_FishingTimer_timeout"]
[connection signal="timeout" from="Timer/Timer" to="." method="_on_Timer_timeout"]
